--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,7 +5,7 @@
                 <a routerLink ="/drivers">Drivers</a>
             </li>
             <li>
-                Seasons
+                <a routerLink ="/seasons">Seasons</a>
             </li>
             <li>
                 Season Schedule
