--- a/src/app/season-detail/season-detail.component.less
+++ b/src/app/season-detail/season-detail.component.less
@@ -1,6 +1,4 @@
 .container {
-    text-align: center;
-
     .tables {
         display: flex;
         flex-direction: row;
@@ -22,6 +20,9 @@
         }
     }
 
+    h2 {
+        margin-left: 16px;
+    }
 
 }
 
@@ -38,5 +39,4 @@
             }
         }
     }
-
 }
