--- a/src/app/drivers/driver.component.html
+++ b/src/app/drivers/driver.component.html
@@ -34,6 +34,6 @@
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of drivers">
+    <mat-paginator [pageSizeOptions]="[15,30,45]" showFirstLastButtons aria-label="Select page of drivers">
     </mat-paginator>
 </div>
