--- a/src/app/nav/nav.component.less
+++ b/src/app/nav/nav.component.less
@@ -7,7 +7,7 @@
         justify-content: center;
         a{
             text-decoration: none;
-            color: black;
+            color: white;
         }
     }
 }
