--- a/src/app/seasons/seasons.component.less
+++ b/src/app/seasons/seasons.component.less
@@ -4,10 +4,11 @@
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: row;
-    margin: 0 2em;
+    vertical-align:middle;
+    margin: 2em 2em;
     gap: 2em;
     
     a{
-        color:beige
+        color:black
     }
 }
