--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,35 @@
 <main>
   <div class="wrapper">
-    <app-nav></app-nav>
-    <router-outlet></router-outlet>
+    <mat-toolbar>
+      <mat-toolbar-row>
+        <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+          <mat-icon>menu</mat-icon>
+        </button>
+        <a routerLink="">F1 Stats</a>
+        <span class="menu-spacer"></span>
+        <div fxShow="true" fxHide.lt-md>
+          <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+          <a routerLink="/drivers" mat-button>Drivers</a>
+          <a routerLink="/seasons" mat-button>Seasons</a>
+          <a routerLink="/circuits" mat-button>Circuits</a>
+        </div>
+      </mat-toolbar-row>
+    </mat-toolbar>
+
+    <mat-sidenav-container fxFlexFill>
+      <mat-sidenav #sidenav>
+        <mat-nav-list>
+          <a routerLink="/drivers" mat-button>Drivers</a>
+          <a routerLink="/seasons" mat-button>Seasons</a>
+          <a routerLink="/circuits" mat-button>Circuits</a>
+        </mat-nav-list>
+      </mat-sidenav>
+      <mat-sidenav-content fxFlexFill><router-outlet></router-outlet></mat-sidenav-content>
+    </mat-sidenav-container>
+
     <footer>
-      <small class="copy">&copy; creted by chof16-devChallenge.io 2023</small>
+      <p>This web is unofficial and is not related with FIA and FOM or the teams.</p> <a
+        href="https://ergast.com/mrd/">Ergast API</a>
     </footer>
   </div>
 </main>
