--- a/src/app/drivers/driver.component.html
+++ b/src/app/drivers/driver.component.html
@@ -1,39 +1,41 @@
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource"  matSort>
+<div class="container">
+    <mat-form-field>
+        <mat-label>Driver</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Search Driver" #input>
+        <mat-icon matSuffix>search_icon</mat-icon>
+    </mat-form-field>
+
+    <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
         <!-- Position Column -->
         <ng-container matColumnDef="givenName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header > First Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.givenName}} </td>
+            <mat-header-cell mat-header-cell *matHeaderCellDef mat-sort-header> First Name </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let element"> {{element.givenName}} </mat-cell>
         </ng-container>
 
         <!-- Position Column -->
         <ng-container matColumnDef="familyName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header > Last Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.familyName}} </td>
+            <mat-header-cell mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let element"> {{element.familyName}} </mat-cell>
         </ng-container>
 
         <!-- Name Column -->
         <ng-container matColumnDef="nationality">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header > Nationality </th>
-            <td mat-cell *matCellDef="let element"> {{element.nationality}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="dateOfBirth">
-            <th  mat-sort-header mat-header-cell *matHeaderCellDef> Date of birth </th>
-            <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+            <mat-header-cell mat-header-cell *matHeaderCellDef mat-sort-header> Nationality </mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let element"> {{element.nationality}} </mat-cell>
         </ng-container>
 
         <ng-container matColumnDef="moreInfo">
-            <th  mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">  <a mat-raised-button  class="hvr-grow" routerLink="/drivers/{{element.driverId}}" >More info</a> </td>
+            <mat-header-cell mat-header-cell *matHeaderCellDef ></mat-header-cell>
+            <mat-cell mat-cell *matCellDef="let element"> <a mat-raised-button
+                    routerLink="/circuits/{{element.driverId}}">More info</a> </mat-cell>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
 
     <mat-paginator [pageSizeOptions]="[15,30,45]" showFirstLastButtons aria-label="Select page of drivers">
     </mat-paginator>
+
 </div>
