--- a/src/app/season-detail/season-detail.component.less
+++ b/src/app/season-detail/season-detail.component.less
@@ -4,7 +4,7 @@
         flex-direction: row;
         justify-content: space-around;
         flex-wrap: nowrap;
-
+        margin: 2em;
         .table-pilots,
         .table-constructor {
             min-width: 100px;
@@ -28,11 +28,12 @@
 
 @media screen and (max-width: 425px) {
     .container {
+        margin: 0;
         .tables {
             flex-direction: column;
             justify-content: none;
             gap: 2em 0;
-
+            margin: 0;
             .table-pilots,
             .table-constructor {
                 width: 100%;
