PACKAGE JSON CHANGED

--- a/src/app/drivers/driver.component.html
+++ b/src/app/drivers/driver.component.html
@@ -28,7 +28,7 @@
         <ng-container matColumnDef="moreInfo">
             <mat-header-cell mat-header-cell *matHeaderCellDef ></mat-header-cell>
             <mat-cell mat-cell *matCellDef="let element"> <a mat-raised-button
-                    routerLink="/circuits/{{element.driverId}}">More info</a> </mat-cell>
+                    routerLink="/drivers/{{element.driverId}}">More info</a> </mat-cell>
         </ng-container>
 
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
