--- a/src/app/driver-component/driver-component.component.less
+++ b/src/app/driver-component/driver-component.component.less
@@ -1,3 +1,30 @@
-.container{
+.container {
     margin: 0 2em;
+
+    .imagen {
+        position: absolute;
+        top: 5px;
+        right : 30px;
+
+        img {
+            height: 250px;
+            width: 200px
+        }
+
+    }
+}
+
+
+@media screen and (max-width:767px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .imagen {
+            position: static;
+            text-align: center;
+
+        }
+    }
 }
