Updated pages of season-detail and driver-detail

--- a/src/app/circuit-details/circuit-details.component.html
+++ b/src/app/circuit-details/circuit-details.component.html
@@ -1,5 +1,10 @@
 <div class="container">
 
+    <ul class="breadcrumb">
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="/circuits/">Circuits</a></li>
+    </ul>
+
     <div class="info">
         <h1>{{circuit?.circuitName}}</h1>
 
