--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
           <a routerLink="/drivers" mat-button>Drivers</a>
           <a routerLink="/seasons" mat-button>Seasons</a>
           <a routerLink="/circuits" mat-button>Circuits</a>
+          <a routerLink="/constructors" mat-button>Constructors</a>
+
         </mat-nav-list>
       </mat-sidenav>
       <mat-sidenav-content fxFlexFill><router-outlet></router-outlet></mat-sidenav-content>
