--- a/src/app/constructor-detail/constructor-detail.component.html
+++ b/src/app/constructor-detail/constructor-detail.component.html
@@ -18,12 +18,20 @@
 
         <div *ngIf="actual_drivers!==undefined && actual_drivers.Drivers.length!=0" id="drivers">
             <h1>Actual drivers</h1>
-            <a routerLink="/drivers/{{actual_drivers.Drivers[0].driverId}}">{{actual_drivers.Drivers[0].givenName}} {{actual_drivers.Drivers[0].familyName}}</a>
-            <a routerLink="/drivers/{{actual_drivers.Drivers[1].driverId}}">{{actual_drivers.Drivers[1].givenName}} {{actual_drivers.Drivers[1].familyName}}</a>
+            <a routerLink="/drivers/{{actual_drivers.Drivers[0].driverId}}">{{actual_drivers.Drivers[0].givenName}}
+                {{actual_drivers.Drivers[0].familyName}}</a>
+            <a routerLink="/drivers/{{actual_drivers.Drivers[1].driverId}}">{{actual_drivers.Drivers[1].givenName}}
+                {{actual_drivers.Drivers[1].familyName}}</a>
         </div>
     </div>
 
-
-
+    <div *ngIf="drivers.length != 0">
+        <h2 id="cabecera">List of Drivers</h2>
+        <mat-action-list role="list" class="lista">
+            <ng-template ngFor let-item [ngForOf]="drivers" let-i="index">
+                <mat-list-item role="listitem" routerLink="/drivers/{{drivers[i].driverId}}">{{drivers[i].givenName}} {{drivers[i].familyName}}</mat-list-item>
+            </ng-template>
+        </mat-action-list>
+    </div>
 
 </div>
